Feat,Fixt: postScorea add, status String to boolean 별점을 추기, status를 boolean으로 받아옴

--- a/src/main/resources/templates/usr/challenge/modifypost.html
+++ b/src/main/resources/templates/usr/challenge/modifypost.html
@@ -47,9 +47,9 @@
                                         <label class="label">
                                             <span class="text-gray-400">공개 여부</span>
                                         </label>
-                                        <input type="radio" name="status" value="공개" class="radio radio-accent"
+                                        <input type="radio" name="status" value=true class="radio radio-accent"
                                                checked/>공개
-                                        <input type="radio" name="status" value="비공개"
+                                        <input type="radio" name="status" value=false
                                                class="radio radio-accent"/>비공개
                                     </div>
                                 </div>
@@ -61,8 +61,8 @@
                                         <label class="label">
                                             <span class="text-gray-400">공개 여부</span>
                                         </label>
-                                        <input type="radio" name="status" value="공개" class="radio radio-accent"/>공개
-                                        <input type="radio" name="status" value="비공개" class="radio radio-accent"
+                                        <input type="radio" name="status" value=true class="radio radio-accent"/>공개
+                                        <input type="radio" name="status" value=false class="radio radio-accent"
                                                checked/>비공개
                                     </div>
                                 </div>
