--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -43,7 +43,7 @@
                     <div class="my-7">
                         <span class="text-gray-400">챌린지 일정</span>
                         <p class="text-[20px] bolder-double"
-                           th:text="${challenge.startDate} + ' ~ ' + ${challenge.endDate}"></p>
+                           th:text="${challenge.startDate} + ' 시작 =>  ' + ${challenge.challengePeriod} + '주 과정'"></p>
                     </div>
 
                     <div>
