--- a/src/main/resources/templates/usr/member/layout.html
+++ b/src/main/resources/templates/usr/member/layout.html
@@ -60,11 +60,43 @@
     <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">DevChall</title>
 </head>
 
-<body class="bg-[#F2F4F4] text-black min-h-screen flex">
+<body class="bg-[#F2F4F4] text-black min-h-screen flex flex-col">
 
 <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.5/dist/full.css" rel="stylesheet" type="text/css"/>
 <script src="https://cdn.tailwindcss.com"></script>
+<!--네브바 시작-->
+<nav>
+    <div class="navbar text-accent bg-[#121212]">
+        <div class="navbar-start">
+            <a class="btn btn-ghost normal-case" href="/">
+                <h3>DevChall</h3>
+            </a>
 
+            <div class="form-control">
+                <div class="input-group">
+                    <input type="text" placeholder="검색" class="input input-bordered text-black" style="height:32px"/>
+                    <button class="btn btn-sm btn-square">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="navbar-center hidden lg:flex ">
+
+        </div>
+        <div class="navbar-end" >
+
+            <a th:if="${@rq.login}" href="usr/challenge/create" class="btn btn-sm btn-primary mx-2">챌린지 생성</a>
+            <a th:if="${@rq.logout}" href="usr/member/join" class="btn btn-sm btn-outline btn-accent mx-2">회원가입</a>
+            <a th:if="${@rq.logout}" href="usr/member/login" class="btn btn-sm bg-accent mx-2">로그인</a>
+            <a th:if="${@rq.login}" href="usr/member/me" class="badge badge-accent font-bold" th:text="${@rq.member.nickname}"></a>
+            <form th:action="|/usr/member/logout|" method="post" class="m-0">
+                <button th:if="${@rq.login}" type="submit" class="btn btn-sm btn-ghost"> 로그아웃</button>
+            </form>
+        </div>
+    </div>
+</nav>
+<!--네브바 끝-->
 <main layout:fragment="main" class="flex-1"></main>
 
 </body>
